--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,7 @@ button {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: var(--dark);
 }
 .portfolio__subtitle {
